# Discord-Chat-Plugin

./: .gitignore  BOT_INTEGRATION.md  CHANGELOG.md  CMakeLists.txt  LICENSE.md  LOG_EXAMPLE.md  README.md  README_DEPLOY.txt  SETUP.md  UE4SS_INTEGRATION.md  blocked_keys.json  build.bat  build.ps1  build_direct.bat  build_simple.cmd  clean_rebuild.cmd  deploy.ps1  fix_installation.ps1  package.ps1  plan.md  rebuild.cmd
config/: config.json
include/: blocked_key_store.h  chat_hook.h  config.h  console_hook.h  console_pipe.h  console_reader.h  copyright_crypto.h  copyright_endpoint.h  discord_bot.h  discord_webhook.h  file_bridge.h  http_client.h  http_server.h  install.h  json.h  log_watcher.h  logger.h  plugin.h  ue4ss_dynamic.h
lib/include/nlohmann/: json.hpp
src/: blocked_key_store.cpp  chat_hook.cpp  config.cpp  console_hook.cpp  console_pipe.cpp  console_reader.cpp  copyright_crypto.cpp  copyright_endpoint.cpp  discord_bot.cpp  discord_webhook.cpp  file_bridge.cpp  http_client.cpp  http_server.cpp  install.cpp  log_watcher.cpp  logger.cpp  main.cpp  plugin.cpp  ue4ss_mod.cpp
test/: PalDiscordBridge_in.txt  blocked_keys.json  bridge_in.txt  bridge_out.txt  config.json  test_config.json  test_discord_webhook.ps1  test_plugin.ps1  test_remote_check.ps1
tools/: README.md  gen_crypto.py  gen_crypto_output.txt  gen_crypto_output3.txt  gen_crypto_output_py.txt
ue4ss/: CMakeLists.txt
ue4ss/mod/: CMakeLists.txt
ue4ss_lua/: mod.txt
ue4ss_lua/Scripts/: main.lua
